--- a/cctv5_vip/pubspec.yaml
+++ b/cctv5_vip/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   json_annotation: ^3.1.1
   webview_flutter: ^2.0.8
   dio: ^4.0.0
+  provider: ^5.0.0
+  flutter_swiper: ^1.1.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
