--- a/cctv5_vip/pubspec.yaml
+++ b/cctv5_vip/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   dio: ^4.0.0
   provider: ^5.0.0
   flutter_swiper: ^1.1.6
+  pull_to_refresh: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
