--- a/cctv5_vip/pubspec.yaml
+++ b/cctv5_vip/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   provider: ^5.0.0
   flutter_swiper: ^1.1.6
   pull_to_refresh: ^2.0.0
+  orientation: ^1.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
