--- a/cctv5_vip/pubspec.yaml
+++ b/cctv5_vip/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   flutter_swiper: ^1.1.6
   pull_to_refresh: ^2.0.0
   orientation: ^1.3.0
+  vip5_video_player:
+    git:
+      url: https://github.com/wuzhengchuang/video_player.git
+      path: vip5_video_player
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
