--- a/cctv5_vip/pubspec.yaml
+++ b/cctv5_vip/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   pull_to_refresh: ^2.0.0
   orientation: ^1.3.0
+  cached_network_image: ^3.0.0
   vip5_video_player:
     git:
       url: https://github.com/wuzhengchuang/video_player.git
