--- a/cctv5_vip/pubspec.yaml
+++ b/cctv5_vip/pubspec.yaml
@@ -31,10 +31,14 @@ dependencies:
   pull_to_refresh: ^2.0.0
   orientation: ^1.3.0
   cached_network_image: ^3.0.0
+# 本地引用
   vip5_video_player:
-    git:
-      url: https://github.com/wuzhengchuang/video_player.git
-      path: vip5_video_player
+    path: /Users/wuchuang/Desktop/Git/video_player/vip5_video_player
+#  Git上引用
+#  vip5_video_player:
+#    git:
+#      url: https://github.com/wuzhengchuang/video_player.git
+#      path: vip5_video_player
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
