--- a/cctv5_vip/pubspec.yaml
+++ b/cctv5_vip/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   orientation: ^1.3.0
   cached_network_image: ^3.0.0
+  video_player: ^2.1.10
 # 本地引用
   vip5_video_player:
     path: /Users/wuchuang/Desktop/Git/video_player/vip5_video_player
